--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8081
+server.port=8080
+spring.datasource.url=jdbc:mysql://43.200.191.144:3306/mydb
+spring.datasource.username=abhi
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
